--- a/style.css
+++ b/style.css
@@ -157,19 +157,22 @@ main {
 .item-card {
   width: 300px;
   height: 169px;
+  font-size: 12px;
   margin-bottom: 60px;
   text-align: center;
   position: relative;
   overflow-y: auto;
   scrollbar-color: #808080 #303030;
   scrollbar-width: thin;
+  transition-duration: 1s;
+  transform: scale(1, 1);
 }
 
 /* make card get bigger on hover */
-/* .item-card:hover {
+.item-card:hover {
   transition-duration: 1s;
-  transform: scale(1.3, 1.3);
-} */
+  transform: scale(1.35, 1.35);
+}
 
 .item-card:hover .item-card-title::after {
   content: '\f054';
@@ -206,6 +209,8 @@ main {
 
 .item-card-info {
   display: none;
+  background-color: #202020;
+  padding: 5px;
 }
 
 .item-card-info li {
@@ -255,6 +260,7 @@ main {
 .item-card li {
   list-style-type: none;
 }
+
 /* item card end */
 
 .primary-search {
@@ -270,7 +276,7 @@ main {
 
 /* related searches bar */
 .results-display-header {
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   width: 100%;
 }
 
